# w2c2

./: .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  array.h  buffer.h  c.c  c.h  compat.c  compat.h  datasegment.h  debug.c  debug.h  elementsegment.h  export.h  file.c  file.h  function.h  functiontype.h  getopt_impl.h  import.c  import.h  instruction.c  instruction.h  labelstack.c  labelstack.h  leb128.h  locals.h  main.c  memory.h  module.c  module.h  opcode.c  opcode.h  path.h  reader.c  reader.h  section.h  (+13 more)
.github/workflows/: tests.yml
9test/: .gitignore  Makefile  main.c  mkfile
9test/src/: ls.wasm
breed/: breed.sh
examples/clang/: .gitignore  Makefile  README.md  Submake  main.c
examples/clang/sys/: .gitignore
examples/clang/sys/include/: __header_inttypes.h  stdarg.h  stddef.h  stdlib.h
examples/clang/sys/include/bits/: alltypes.h
examples/clang/sys/include/c++/v1/: __config  __config_site  libcxx.imp
examples/clang/sys/lib/wasm32-wasip1/: libc.imports
examples/clang/sys/share/libc++/v1/: std.compat.cppm  std.cppm
examples/clang/sys/share/wasm32-wasip1/: predefined-macros.txt
examples/coremark/: .gitignore  CMakeLists.txt  Makefile  README.md  main.c
examples/coremark/CW7/: Carbon.r  CoreMark.mcp  CoreMark.xml  prefix.h
examples/dino-cocoa/: .gitignore  AppDelegate.h  AppDelegate.m  CMakeLists.txt  DinoView.h  DinoView.m  README.md  main.m  plist.in
examples/dino-gba/: .gitignore  Makefile  main.c
examples/dino-nds/: .gitignore  Makefile  README.md  main.c
examples/dino-nextstep/: README.md
examples/dino-nextstep/Dino.project/: Dino.iconheader  Dino_main.m  Makefile  Makefile.postamble  Makefile.preamble  PB.project  dino.c  dino.tiff  w2c2_base.h
examples/dino-sdl1/: .gitignore  Makefile  README.md  dino.c  dino.wat  main.c
examples/dino-sdl2/: Makefile  README.md  main.c
examples/fac/: .gitignore  Makefile  fac.wasm  fac.wat  main.c
examples/go-wasi/: CMakeLists.txt  Makefile  Submake  gowasi.wasm  main.c
examples/go-wasi/src/: main.go
examples/isatty/: .gitignore  Makefile  isatty.wasm  main.c
examples/ls/: Makefile  main.c
examples/ls/src/: Makefile  ls.wasm  main.c
examples/pthreads/: Makefile  main.c
examples/pthreads/src/: Makefile  main.c
examples/python/: .gitignore  CMakeLists.txt  Makefile  README.md  Submake  main.c
examples/python/CW7/: README.md  prefix.h  python.mcp  python.xml
examples/python/lib/python3.11/: _sysconfigdata__wasi_wasm32-wasi.py
examples/rust-wasi/: .gitignore  CMakeLists.txt  Cargo.toml  Makefile  Submake  main.c  rust-wasi.wasm
examples/rust-wasi/CW7/: rustwasi.mcp  rustwasi.xml
examples/rust-wasi/src/: main.rs
examples/swift-wasi/: .gitignore  Makefile  Package.swift  Submake  main.c
examples/swift-wasi/Sources/swift-wasi/: main.swift
examples/threads/: Makefile  main.c
examples/threads/src/: Makefile  main.c  wasi_thread_spawn.S
futex/: CMakeLists.txt  Makefile  futex.c  futex.h  futex_test.c  futex_test.h  list.c  list.h  list_test.c  list_test.h  map.c  map.h  map_test.c  map_test.h  test.c
tests/: .gitignore  Makefile  README.md  address.wast  binary-leb128.wast  binary.wast  block.wast  br.wast  br_if.wast  br_table.wast  bulk.wast  call.wast  call_indirect.wast  const.wast  conversions.wast  data.wast  elem.wast  export_imported_function.wast  exports.wast  f32.wast  fac.wast  float_literals.wast  float_memory.wast  func.wast  gen.py  global.wast  if.wast  local_get.wast  local_set.wast  loop.wast  main.c  memory.wast  memory_grow.wast  return.wast  run.py  select.wast  shared.wast  stack.wast  start.wast  test.h  (+12 more)
w2c2/: CMakeLists.txt  Makefile  array.c  array.h  buffer.h  c.c  c.h  compat.c  compat.h  datasegment.h  debug.c  debug.h  elementsegment.h  export.c  export.h  file.c  function.h  getopt_impl.h  global.h  import.h  instruction.c  instruction.h  labelstack.h  leb128.h  leb128_test.c  leb128_test.h  locals.h  main.c  memory.h  mkfile  module.h  name.h  opcode.c  opcode.h  opcode_test.c  opcode_test.h  reader.c  reader.h  section.c  section.h  (+14 more)
wasi/: CMakeLists.txt  Makefile  mac.c  mac.h  mkfile  test.c  wasi.c  wasi.h  win32.c  win32.h  win32_dirent.h
